--- a/Proiect/Frontend/package.json
+++ b/Proiect/Frontend/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.1.10",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
     "ng2-semantic-ui": "^0.9.7",
+    "ngx-toastr": "^11.3.2",
     "rxjs": "6.0.0",
     "zone.js": "^0.8.26"
   },
